# furry-octo-waddle

./: CMakeLists.txt
cmake_modules/: FindSFML.cmake
include/: constants.hpp  cpu.hpp  screen.hpp  system.hpp
src/: cpu.cpp  main.cpp  screen.cpp  system.cpp
